# mcp-server-demo

./: Dockerfile  app.py  client.py  debug.py  gemini_mcp.py  mcp_config.py  mcp_debug.py  pyproject.toml  requirements.txt  server.py
mcp_agent/: client.py  client_helper.py  mcp_config.py  sample_geimini.py  session_manager.py  stream_handler.py
vector_db/: client.py  operations.py  test_query.py
