[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "google>=3.0.0",
    "google-genai>=1.9.0",
    "mcp[cli]>=1.6.0",
    "pinecone>=6.0.2",
    "requests>=2.32.3",
]
